# tfandroid

./: .gitignore  CMakeLists.txt  build.gradle  data.txt  log.h
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  log.h
app/src/main/cpp/demo/object_tracking/: config.h  image_data.h  keypoint_detector.h  object_model.h  time_log.h  utils.h
app/src/main/cpp/object_tracking/: flow_cache.h  frame_pair.cc  frame_pair.h  geom.h  gl_utils.h  image-inl.h  image.h  image_utils.h  integral_image.h  jni_utils.h  keypoint.h  keypoint_detector.cc  object_detector.h  object_tracker.cc  object_tracker.h  object_tracker_jni.cc  optical_flow.h  sprite.h  tracked_object.cc  tracked_object.h
app/src/main/cpp/tensorflow/c/: c_api.cc  log.h
app/src/main/cpp/tensorflow/contrib/android/cmake/gradle/wrapper/: gradle-wrapper.properties
app/src/main/cpp/tensorflow/core/common_runtime/: device.h  device_factory.cc  simple_graph_execution_state.cc  simple_placer.cc
app/src/main/cpp/tensorflow/core/example/: example_parser_configuration.pb.cc  feature.pb.cc
app/src/main/cpp/tensorflow/core/framework/: allocation_description.pb.cc  attr_value.pb.cc  cost_graph.pb.cc  device_attributes.pb.cc  function.h  function.pb.cc  graph.pb.cc  graph_transfer_info.pb.cc  kernel_def.pb.cc  kernel_def_builder.cc  log_memory.cc  log_memory.pb.cc  node_def.pb.cc  node_def_util.cc  op.cc  op.h  op_def.pb.cc  op_gen_overrides.pb.cc  op_gen_overrides.pb.h  reader_base.pb.cc  remote_fused_graph_execute_info.pb.cc  resource_handle.pb.cc  step_stats.pb.cc  summary.pb.cc  summary.pb.h  tensor.h  tensor.pb.cc  tensor_description.pb.cc  tensor_shape.h  tensor_shape.pb.cc  tensor_slice.pb.cc  types.pb.cc  types.pb.h  variable.pb.cc  variant_encode_decode.h  versions.pb.cc
app/src/main/cpp/tensorflow/core/graph/: graph.cc  graph.h
app/src/main/cpp/tensorflow/core/lib/core/: error_codes.pb.cc  error_codes.pb.h
app/src/main/cpp/tensorflow/core/protobuf/: cluster.pb.cc  config.pb.cc  control_flow.pb.cc  debug.pb.cc  device_properties.pb.cc  master.pb.cc  master.pb.h  master_service.pb.cc  master_service.pb.h  meta_graph.pb.cc  named_tensor.pb.cc  queue_runner.pb.cc  rewriter_config.pb.cc  rewriter_config.pb_text.cc  saved_model.pb.cc  saver.pb.cc  tensor_bundle.pb.cc  tensorflow_server.pb.cc  worker.pb.cc  worker.pb.h  worker_service.pb.cc  worker_service.pb.h
app/src/main/cpp/tensorflow/core/util/: event.pb.cc  test_log.pb.cc
app/src/main/cpp/tensorflow/examples/android/: build.gradle
app/src/main/cpp/tensorflow/examples/android/gradle/wrapper/: gradle-wrapper.properties
app/src/main/cpp/tensorflow/examples/android/gradleBuild/android-profile/: profile-2017-07-25-13-57-11-083.rawproto  profile-2017-07-25-13-57-18-835.rawproto  profile-2017-07-25-13-57-58-740.rawproto  profile-2017-07-25-13-57-59-637.rawproto  profile-2017-07-25-14-18-33-769.rawproto  profile-2017-07-25-14-18-37-995.rawproto  profile-2017-07-25-14-18-42-792.rawproto  profile-2017-07-25-14-18-52-126.rawproto  profile-2017-07-25-14-18-56-800.rawproto  profile-2017-07-25-17-02-03-534.rawproto  profile-2017-07-25-17-02-08-414.rawproto  profile-2017-07-25-17-26-31-206.rawproto  profile-2017-07-25-17-26-33-202.rawproto  profile-2017-07-26-10-27-10-489.rawproto  profile-2017-07-26-10-27-14-157.rawproto
app/src/main/cpp/tensorflow/examples/android/gradleBuild/intermediates/blame/res/debug/multi/: values-sw600dp-v13.json  values-v11.json  values-v14.json  values-v21.json  values.json
app/src/main/cpp/tensorflow/examples/android/gradleBuild/intermediates/blame/res/debug/single/: drawable-hdpi.json  drawable-mdpi.json  drawable-xhdpi.json  drawable-xxhdpi.json  layout.json
app/src/main/cpp/tensorflow/examples/android/gradleBuild/intermediates/incremental/mergeDebugAndroidTestResources/: compile-file-map.properties  merger.xml
app/src/main/cpp/tensorflow/examples/android/gradleBuild/intermediates/incremental/mergeDebugResources/: compile-file-map.properties  merger.xml
app/src/main/cpp/tensorflow/examples/android/gradleBuild/intermediates/manifests/full/debug/: AndroidManifest.xml
app/src/main/cpp/tensorflow/examples/android/gradleBuild/outputs/logs/: manifest-merger-debug-report.txt
app/src/main/cpp/tensorflow/examples/android/src/org/tensorflow/demo/: ClassifierActivity.java
app/src/main/java/al/omid/tfdroid/: MainActivity.java
app/src/main/java/org/tensorflow/demo/: CameraActivity.java  ClassifierActivity.java  DetectorActivity.java  RecognitionScoreView.java  TensorFlowImageClassifier.java
app/src/main/java/org/tensorflow/demo/env/: BorderedText.java
doc/: struct.md
gradle/wrapper/: gradle-wrapper.properties
tensorflow/c/: c_api.cc
tensorflow/contrib/android/jni/: run_stats_jni.cc
tensorflow/contrib/cmake/: CMakeLists.txt  tf_example.cmake
tensorflow/contrib/cmake/example/: example.cc
tensorflow/core/common_runtime/: direct_session.cc  executor.cc  session_factory.cc
tensorflow/core/example/: example.pb.cc
tensorflow/core/framework/: cost_graph.pb.cc  device_attributes.pb.cc  function.cc  kernel_def_builder.cc  op.h  op_def.pb.cc  reader_base.pb.cc  resource_handle.pb.cc  step_stats.pb.cc  summary.pb.cc  summary.pb_text.cc  tensor_description.pb.cc  tensor_slice.pb.cc  variable.pb.cc
tensorflow/core/graph/: graph_constructor.cc
tensorflow/core/lib/core/: error_codes.pb.cc
tensorflow/core/protobuf/: cluster.pb.cc  control_flow.pb.cc  debug.pb.cc  device_properties.pb.cc  meta_graph.pb.cc  rewriter_config.pb.cc  saved_model.pb.cc  tensor_bundle.pb.cc  tensorflow_server.pb.cc
tensorflow/core/util/: memmapped_file_system.pb.cc  saved_tensor_slice.pb.cc
tensorflow/java/src/main/native/: session_jni.cc
